; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/util/extr_tg.c_sec.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/util/extr_tg.c_sec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tone = common dso_local global i32 0, align 4
@HIGH = common dso_local global i32 0, align 4
@OFF = common dso_local global i32 0, align 4
@LOW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sec(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @tone, align 4
  %4 = load i32, i32* @HIGH, align 4
  %5 = call i32 @peep(i32 5, i32 %3, i32 %4)
  %6 = load i32, i32* @tone, align 4
  %7 = load i32, i32* @OFF, align 4
  %8 = call i32 @peep(i32 25, i32 %6, i32 %7)
  %9 = load i32, i32* %2, align 4
  %10 = sub nsw i32 %9, 30
  %11 = load i32, i32* @LOW, align 4
  %12 = call i32 @peep(i32 %10, i32 100, i32 %11)
  %13 = load i32, i32* %2, align 4
  %14 = sub nsw i32 1000, %13
  %15 = load i32, i32* @OFF, align 4
  %16 = call i32 @peep(i32 %14, i32 100, i32 %15)
  ret void
}

declare dso_local i32 @peep(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
